Bug 192849 - Launching Mozilla with an OpenURL AppleEvent fails to open the given URL. r=lordpixel/sr=sfraser